# ML-Project1

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
ml_project1/: __init__.py  dataset.py  features.py  plots.py
ml_project1/modeling/: predict.py  train.py
