[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ml_project1"
version = "0.0.1"
description = "Stack Overflow Developer Survey Analysis"
authors = [
  { name = "omar" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.12.3"


[tool.ruff]
line-length = 99
src = ["ml_project1"]
include = ["pyproject.toml", "ml_project1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ml_project1"]
force-sort-within-sections = true

